--- a/src/Plugins/Guit.Open/Properties/Resources.resx
+++ b/src/Plugins/Guit.Open/Properties/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Open" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="Open.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
   <data name="ResolveConflicts" xml:space="preserve">
     <value>Resolve</value>
   </data>
