--- a/src/Guit/Properties/Resources.resx
+++ b/src/Guit/Properties/Resources.resx
@@ -117,7 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Filter" xml:space="preserve">
+    <value>Filter</value>
+  </data>
+  <data name="Filter.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>Refresh</value>
+  </data>
+  <data name="Refresh.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
+  <data name="SelectAll" xml:space="preserve">
+    <value>Select All</value>
+  </data>
+  <data name="SelectAll.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
+  <data name="ShowNextView" xml:space="preserve">
+    <value>Next View</value>
+  </data>
+  <data name="ShowNextView.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
+  <data name="ShowPreviousView" xml:space="preserve">
+    <value>Previous View</value>
+  </data>
+  <data name="ShowPreviousView.Description" xml:space="preserve">
+    <value>TODO</value>
+  </data>
   <data name="Sync.Pull" xml:space="preserve">
     <value>Pull</value>
+  </data>
+  <data name="View" xml:space="preserve">
+    <value>View</value>
+  </data>
+  <data name="View.Description" xml:space="preserve">
+    <value>TODO</value>
   </data>
 </root>
