--- a/src/Plugins/Guit.Log/Properties/Resources.resx
+++ b/src/Plugins/Guit.Log/Properties/Resources.resx
@@ -117,46 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CherryPick" xml:space="preserve">
-    <value>Cherry Pick</value>
+  <data name="Log" xml:space="preserve">
+    <value>Log</value>
   </data>
-  <data name="CherryPick.Description" xml:space="preserve">
-    <value>TODO</value>
-  </data>
-  <data name="CherryPicker" xml:space="preserve">
-    <value>Cherry-Picker</value>
-  </data>
-  <data name="CherryPicker.Description" xml:space="preserve">
-    <value>TODO</value>
-  </data>
-  <data name="Fetch" xml:space="preserve">
-    <value>Fetch</value>
-  </data>
-  <data name="Fetch.Description" xml:space="preserve">
-    <value>TODO</value>
-  </data>
-  <data name="Ignore" xml:space="preserve">
-    <value>Ignore</value>
-  </data>
-  <data name="Ignore.Description" xml:space="preserve">
-    <value>TODO</value>
-  </data>
-  <data name="Push" xml:space="preserve">
-    <value>Push</value>
-  </data>
-  <data name="Push.Description" xml:space="preserve">
+  <data name="Log.Description" xml:space="preserve">
     <value>TODO</value>
   </data>
   <data name="Reset" xml:space="preserve">
     <value>Reset</value>
   </data>
   <data name="Reset.Description" xml:space="preserve">
-    <value>TODO</value>
-  </data>
-  <data name="SelectBaseBranch" xml:space="preserve">
-    <value>Select Branch</value>
-  </data>
-  <data name="SelectBaseBranch.Description" xml:space="preserve">
     <value>TODO</value>
   </data>
 </root>
